--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "brfs": "^2.0.2",
+    "browserify-fs": "^1.0.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "js-file-download": "^0.4.12",
+    "mxgraph": "4.0.6",
+    "mxgraph-js": "1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
